<resources>
    <string name="app_name">Healthy_v_7</string>
    <string name="healthy">Healthy</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="user">Profile</string>
    <string name="social">Social</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nutrition">Nutrition</string>
</resources>